WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177307
test262: test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js ASSERTs
https://bugs.webkit.org/show_bug.cgi?id=177307
Summary
test262: test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-com...
Ryan Haddad
Reported
2017-09-21 09:47:04 PDT
Exit code 0 (I guess we need to update the expectations?) FAIL: test262.yaml/test262/test/language/statements/for-await-of/async-gen-decl-dstr-obj-prop-put-unresolvable-no-strict.js.default FAIL: test262.yaml/test262/test/language/statements/for-await-of/async-func-decl-dstr-obj-id-put-unresolvable-no-strict.js.default FAIL: test262.yaml/test262/test/language/statements/for-await-of/async-func-decl-dstr-obj-prop-put-unresolvable-no-strict.js.default FAIL: test262.yaml/test262/test/language/statements/for-await-of/async-gen-decl-dstr-array-elem-iter-rtrn-close-null.js.default FAIL: test262.yaml/test262/test/language/statements/for-await-of/async-gen-decl-dstr-array-elem-iter-rtrn-close-null.js.default-strict FAIL: test262.yaml/test262/test/language/statements/for-await-of/async-gen-decl-dstr-obj-id-put-unresolvable-no-strict.js.default Assertion failures: FAIL: test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default-strict FAIL: test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: ASSERTION FAILED: index < string.size() test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: ./runtime/RegExpPrototype.cpp(229) : FlagsString JSC::flagsString(JSC::ExecState *, JSC::JSObject *) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 1 0x103276ae0 WTFCrash test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 2 0x10228010a JSC::flagsString(JSC::ExecState*, JSC::JSObject*) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 3 0x10227d565 JSC::regExpProtoGetterFlags(JSC::ExecState*) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 4 0x101f878b1 vmEntryToNative test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 5 0x102f668f5 JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 6 0x1031da2e0 JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 7 0x10326a9b1 JSC::callGetter(JSC::ExecState*, JSC::JSValue, JSC::JSValue) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 8 0x10225b000 JSC::PropertySlot::functionGetter(JSC::ExecState*) const test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 9 0x101f4a622 JSC::PropertySlot::getValue(JSC::ExecState*, JSC::PropertyName) const test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 10 0x1020674c1 JSC::JSValue::get(JSC::ExecState*, JSC::PropertyName, JSC::PropertySlot&) const test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 11 0x10303b1b4 llint_slow_path_get_by_id test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 12 0x101f8ab37 llint_entry test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 13 0x101f8770c vmEntryToJavaScript test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 14 0x102fd69e1 JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 15 0x102f661a7 JSC::Interpreter::executeProgram(JSC::SourceCode const&, JSC::ExecState*, JSC::JSObject*) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 16 0x1031fb1a7 JSC::evaluate(JSC::ExecState*, JSC::SourceCode const&, JSC::JSValue, WTF::NakedPtr<JSC::Exception>&) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 17 0x101db77af runWithOptions(GlobalObject*, CommandLine&) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 18 0x101d9f324 jscmain(int, char**)::$_6::operator()(JSC::VM&, GlobalObject*) const test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 19 0x101d9c753 int runJSC<jscmain(int, char**)::$_6>(CommandLine, bool, jscmain(int, char**)::$_6 const&) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 20 0x101d9b49f jscmain(int, char**) test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 21 0x101d9b3fe main test262.yaml/test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js.default: 22 0x7fff9adc15ad start FAIL: test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default FAIL: test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: ASSERTION FAILED: index < string.size() test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: ./runtime/RegExpPrototype.cpp(229) : FlagsString JSC::flagsString(JSC::ExecState *, JSC::JSObject *) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 1 0x101e15ae0 WTFCrash test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 2 0x100e1f10a JSC::flagsString(JSC::ExecState*, JSC::JSObject*) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 3 0x100e1c565 JSC::regExpProtoGetterFlags(JSC::ExecState*) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 4 0x100b268b1 vmEntryToNative test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 5 0x101b058f5 JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 6 0x101d792e0 JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 7 0x101e099b1 JSC::callGetter(JSC::ExecState*, JSC::JSValue, JSC::JSValue) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 8 0x100dfa000 JSC::PropertySlot::functionGetter(JSC::ExecState*) const test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 9 0x100ae9622 JSC::PropertySlot::getValue(JSC::ExecState*, JSC::PropertyName) const test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 10 0x100c064c1 JSC::JSValue::get(JSC::ExecState*, JSC::PropertyName, JSC::PropertySlot&) const test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 11 0x101bda1b4 llint_slow_path_get_by_id test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 12 0x100b29b37 llint_entry test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 13 0x100b2670c vmEntryToJavaScript test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 14 0x101b759e1 JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 15 0x101b051a7 JSC::Interpreter::executeProgram(JSC::SourceCode const&, JSC::ExecState*, JSC::JSObject*) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 16 0x101d9a1a7 JSC::evaluate(JSC::ExecState*, JSC::SourceCode const&, JSC::JSValue, WTF::NakedPtr<JSC::Exception>&) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 17 0x1009587af runWithOptions(GlobalObject*, CommandLine&) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 18 0x100940324 jscmain(int, char**)::$_6::operator()(JSC::VM&, GlobalObject*) const test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 19 0x10093d753 int runJSC<jscmain(int, char**)::$_6>(CommandLine, bool, jscmain(int, char**)::$_6 const&) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 20 0x10093c49f jscmain(int, char**) test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 21 0x10093c3fe main test262.yaml/test262/test/built-ins/RegExp/prototype/flags/return-order.js.default-strict: 22 0x7fff9adc15ad start
Attachments
[PATCH] Proposed Fix
(1.40 KB, patch)
2017-09-21 11:39 PDT
,
Joseph Pecoraro
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-09-21 09:47:41 PDT
Forgot the link:
https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20Test262%20%28Tests%29/builds/3192
Joseph Pecoraro
Comment 2
2017-09-21 11:23:15 PDT
I'll start looking into these.
Ryan Haddad
Comment 3
2017-09-21 11:25:45 PDT
I updated the expectation for the passing ones in
http://trac.webkit.org/projects/webkit/changeset/222333
Joseph Pecoraro
Comment 4
2017-09-21 11:33:52 PDT
The RegExp ASSERTs look pretty straightforward. We assume there can only be 5 regex flags but a 6th was just added. Building a patch for those. The other expectations probably just need to rebaseline, I'll test them individually.
Joseph Pecoraro
Comment 5
2017-09-21 11:34:27 PDT
(In reply to Ryan Haddad from
comment #3
)
> I updated the expectation for the passing ones in >
http://trac.webkit.org/projects/webkit/changeset/222333
Excellent! I'll just fix our assertion!
Joseph Pecoraro
Comment 6
2017-09-21 11:39:25 PDT
Created
attachment 321456
[details]
[PATCH] Proposed Fix
Michael Saboff
Comment 7
2017-09-21 11:41:03 PDT
Comment on
attachment 321456
[details]
[PATCH] Proposed Fix r=me
Joseph Pecoraro
Comment 8
2017-09-21 11:44:08 PDT
<
https://trac.webkit.org/changeset/222336/webkit
>
Radar WebKit Bug Importer
Comment 9
2017-09-27 12:22:30 PDT
<
rdar://problem/34693152
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug