test262: test262/test/annexB/built-ins/RegExp/prototype/flags/order-after-compile.js ASSERTs https://bugs.webkit.org/show_bug.cgi?id=177307

Reviewed by Michael Saboff.

* runtime/RegExpPrototype.cpp:
In r221160 we added support for the new RegExp flag (dotAll).
We needed to make space for it in FlagsString.

Canonical link: https://commits.webkit.org/193643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222336 268f45cc-cd09-0410-ab3c-d52691b4dbfc